# rtxdrake

./: README.md  main.py  notes.md  pyproject.toml  sample.py
.github/workflows/: ruff.yaml
assets/: myscene.usda
docs/: setup_notes.md
rtxdrake/: __init__.py  geom.py  link.py  listener.py  render.py
