[project]
name = "rtxdrake"
description = "asdf"
version = "0.0.1"
authors = [{ name = "Lev Kozlov", email = "kozlov.l.a10@gmail.com" }]
dependencies = ["usd-core", "drake", "lcm"]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/lvjonok/rtxdrake"
repository = "https://github.com/lvjonok/rtxdrake.git"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtxdrake*"]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
